tests/layout/recursion/struct_containing_itself_by_value_errors.err.expected
error: at 2:16: [LAY-RecursiveTypeByValue] type 'S' is recursive by value (cycle: S). Break the cycle by wrapping a field/variant payload in a reference.
   |
 2 |         struct S { s: S }
   |                ^
