tests/layout/recursion/struct_containing_itself_by_value_errors.sim

        struct S { s: S }
        fn f() { entry: return }
        